--- a/styles.css
+++ b/styles.css
@@ -11,16 +11,22 @@
 }
 
 .container {
-  width: 500px;
+  width: 456px;
   overflow: hidden;
   margin: 50px auto 0 auto;
 }
 
-span {
+.board {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+span, button{
   display: block;
   text-align: center;
   font-size: 40px;
   margin-bottom: 40px;
+  margin: 20px auto 40px auto;
 }
 
 .box > img {
@@ -28,3 +34,4 @@ span {
   width: 150px;
   border-radius: 0.5rem;
 }
+
